# kl-llm-contract-evals

./: .gitignore  LICENSE  README.md  WRITEUP.docx  WRITEUP.md  WRITEUP_polished.docx  pyproject.toml
.github/workflows/: ci.yml  evals.yml
badges/: evals.json
baselines/: structured_extraction-2026-03-19_gpt-4.1-mini.json
examples/: structured_extraction.yaml
scripts/: render_polished_docx.py
src/kestrel_evals/: checks.py  cli.py  models.py  runner.py  suite_loader.py
src/kestrel_evals/providers/: base.py  openai_provider.py
